--- a/STM32F103C8X_projects/printFunction_for_Debugging/Objects/printMsg.build_log.htm
+++ b/STM32F103C8X_projects/printFunction_for_Debugging/Objects/printMsg.build_log.htm
@@ -22,44 +22,12 @@ Dialog DLL:      TCM.DLL V1.56.1.0
  
 <h2>Project:</h2>
 D:\yyigitbasi_stm32_git\STM32F103C8X_projects\printFunction_for_Debugging\printMsg.uvprojx
-Project File Date:  12/13/2022
+Project File Date:  12/16/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.18', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'Target 1'
-assembling startup_stm32f10x_md.s...
-main.c(16): warning: mixing declarations and code is incompatible with standards before C99 [-Wdeclaration-after-statement]
-        printMsg_config printer;
-                        ^
-main.c(2): warning: In file included from...
-./printMsg.h(22): warning: unused function 'UsartBaudRateSet' [-Wunused-function]
-static uint8_t UsartBaudRateSet(USART_TypeDef *UsartP, uint32_t baudR); 
-               ^
-main.c(9): warning: unused variable 'test' [-Wunused-variable]
-static int test = 0;
-           ^
-3 warnings generated.
-compiling main.c...
-RTE/Device/STM32F103C8/system_stm32f10x.c(166): warning: no previous extern declaration for non-static variable 'AHBPrescTable' [-Wmissing-variable-declarations]
-__I uint8_t AHBPrescTable[16] = {0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 3, 4, 6, 7, 8, 9};
-            ^
-RTE/Device/STM32F103C8/system_stm32f10x.c(166): note: declare 'static' if the variable is not intended to be used outside of this translation unit
-__I uint8_t AHBPrescTable[16] = {0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 3, 4, 6, 7, 8, 9};
-    ^
-1 warning generated.
-compiling system_stm32f10x.c...
-printMsg.c(200): warning: implicitly declaring library function 'vsprintf' with type 'int (char *, const char *, __builtin_va_list)' [-Wimplicit-function-declaration]
-        vsprintf(buff, msg, args);
-        ^
-printMsg.c(200): note: include the header <stdio.h> or explicitly provide a declaration for 'vsprintf'
-printMsg.c(200): warning: format string is not a string literal [-Wformat-nonliteral]
-        vsprintf(buff, msg, args);
-                       ^~~
-2 warnings generated.
-compiling printMsg.c...
-linking...
-Program Size: Code=9480 RO-data=908 RW-data=4 ZI-data=1640  
-".\Objects\printMsg.axf" - 0 Error(s), 6 Warning(s).
+Build target 'Target 1'
+".\Objects\printMsg.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -90,7 +58,7 @@ Package Vendor: Keil
       Source file:   Device/Source/ARM/STM32F1xx_OPT.s
       Source file:   Device/Source/system_stm32f10x.c
       Include file:  RTE_Driver/Config/RTE_Device.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
